 - [DEV-262] added group filtering  for "Trigger info" (Artem)
 - [DEV-259] added internal links (Artem)
 - [DEV-251] added improved screen editing (Artem)
 - [DEV-249] added support of advanced regular expressions (Artem,Sasha)
 - [DEV-247] added enhancement to the Graph function (Artem)
 - [DEV-233,DEV-237] added support of scheduled maintenance periods (Artem,Sasha)

Changes for 1.6.3

 - [ZBX-712] fixed simple/advanced item filter switch (Alexei)
 - [ZBX-707] fixed sql error when filter items by host group (Alexei)
 - [ZBX-706] fixed element validation in sysmap elements (Artem)
 - [ZBX-705] improved {ESC.HISTORY} macro in recovery notifications (Sasha)
 - [ZBX-647] fixed audit log record for graph update action "added" -> "updated" (alexei)
 - [ZBX-700] fixed possible server crash when using {TRIGGER.NAME} for notifications (Sasha)
 - [DEV-286] improved zabbix main menu (Artem)
 - [ZBX-311] fixed PostgreSQL errors with out of range string data (Sasha)
 - [ZBX-696] fixed import of triggers with {HOSTNAME} macro (Sasha)
 - [ZBX-677] fixed handling of -c parameter in zabbix_sender. Thanks to Jakov Sosic (Sasha)
 - [ZBX-690] fixed memory leak if trigger evaluation fails (Sasha)
 - [DEV-285] added configurable the first dropdown selection (Artem)
 - [ZBX-689] allowed processing of non-agent based checks for unreachable hosts (Sasha)
 - [ZBX-683] removed "Step" field for recovery messages from Event details (Sasha)
 - [ZBX-680] fixed login while entering any page with HTTP auth enabled (Artem)
 - [ZBX-678] default number of HTTP pollers was decreased to one (Sasha)
 - [ZBX-676] fixed sql problem with deletion of many hosts (Artem)
 - [ZBX-675] fixed wrong result of function "nodata" after server restart (Sasha)
 - [ZBX-672] added polish locale (Artem)
 - [ZBX-671] removed net-snmp debug messages from server logs (Sasha)
 - [ZBX-662] fixed support of quotation marks in command in UserParameter's (Sasha)
 - [ZBX-658] fixed deadlocks in dbcache module (Sasha)