@@ -507,7 +507,7 @@
 							$data['applications'] = array_unique(array_merge($data['applications'],get_applications_by_itemid($item['itemid'])));
 							$data['templateid'] = $item['templateid'];
 							
-							check_db_fields($item, $data));
+							check_db_fields($item, $data);
 							
 						update_item($item['itemid'], $data);
 					}
@@ -627,6 +627,9 @@
 					if(!isset($data['ymin_type']))		$data['ymin_type']		= 0;
 					if(!isset($data['ymax_type']))		$data['ymax_type']		= 0;
 
+					if(!isset($data['ymin_item_key']))	$data['ymin_item_key']	= '';
+					if(!isset($data['ymax_item_key']))	$data['ymax_item_key']	= '';
+
 					if(!isset($data['ymin_itemid']))	$data['ymin_itemid']	= 0;
 					if(!isset($data['ymax_itemid']))	$data['ymax_itemid']	= 0;
 					
@@ -640,6 +643,49 @@
 					if(!isset($data['percent_left']))		$data['percent_left']		= 0;
 					if(!isset($data['percent_right']))		$data['percent_right']		= 0;
 					if(!isset($data['items']))				$data['items']			= array();
+					
+
+
+					if(!empty($data['ymin_item_key'])){
+						$data['ymin_item_key'] = explode(':', $data['ymin_item_key']);
+						if(count($data['ymin_item_key']) < 2){
+							$this->data[XML_TAG_GRAPH]['error'] = true;
+							error('Incorrect y min item for graph ['.$data['name'].']');
+							break; // case
+						}
+	
+						$data['host']	= array_shift($data['ymin_item_key']);
+						$data['ymin_item_key']	= implode(':', $data['ymin_item_key']);
+	
+						if(!$item = get_item_by_key($data['ymin_item_key'], $data['host'])){
+							$this->data[XML_TAG_GRAPH]['error'] = true;
+
+							error('Missed item ['.$data['ymin_item_key'].'] for host ['.$data['host'].']');
+							break; // case							
+						}
+
+						$data['ymin_itemid'] = $item['itemid'];
+					}
+
+					if(!empty($data['ymax_item_key'])){
+						$data['ymax_item_key'] = explode(':', $data['ymax_item_key']);
+						if(count($data['ymax_item_key']) < 2){
+							$this->data[XML_TAG_GRAPH]['error'] = true;
+							error('Incorrect y max item for graph ['.$data['name'].']');
+							break; // case
+						}
+	
+						$data['host']	= array_shift($data['ymax_item_key']);
+						$data['ymax_item_key']	= implode(':', $data['ymax_item_key']);
+	
+						if(!$item = get_itemid_by_key($data['ymax_item_key'], $data['host'])){
+							$this->data[XML_TAG_GRAPH]['error'] = true;
+
+							error('Missed item ['.$data['ymax_item_key'].'] for host ['.$data['host'].']');
+							break; // case							
+						}
+						$data['ymax_itemid'] = $item['itemid'];
+					}
 
 					if(!isset($this->data[XML_TAG_HOST]['hostid']) || !$this->data[XML_TAG_HOST]['hostid']){
 						if(isset($this->data[XML_TAG_HOST]['skip']) && $this->data[XML_TAG_HOST]['skip']){
@@ -759,10 +805,7 @@
 					if(!isset($data['type']))		$data['type']		= 0;
 					if(!isset($data['periods_cnt']))	$data['periods_cnt']	= 5;
 
-					if(!($item = DBfetch(DBselect('select i.itemid from items i,hosts h'.
-						' where h.hostid=i.hostid and i.key_='.zbx_dbstr($data['key']).
-						' and h.host='.zbx_dbstr($data['host'])))))
-					{
+					if(!$item = get_item_by_key($data['key'], $data['host'])){
 						$this->data[XML_TAG_GRAPH]['error'] = true;
 
 						error('Missed item ['.$data['key'].'] for host ['.$data['host'].']');
